--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,27 +1,61 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Mon Site{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">Accueil</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="container">
-            {% block body %}{% endblock %}
-        </div>
-    </main>
-    <footer>
-        <p>&copy; 2024 Mon Site. Tous droits réservés.</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>
+			{% block title %}Mon Site
+			{% endblock %}
+		</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+	</head>
+	{% block body %}
+
+			<header>
+				<nav>
+					<div class="container-fluid">
+						<nav class="navbar navbar-expand-md navbar-light bg-light" role="navigation">
+							<a href="/" class="navbar-brand"><img src="https://uploads-ssl.webflow.com/62f375fa349867308a2e90dc/63030f03c32fa7cc10215a72_Logo.webp" loading="lazy" width="140" alt="Logo" class="navbar_logo"/></a>
+							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+								<span class="navbar-toggler-icon"></span>
+							</button>
+							<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+								<ul class="navbar-nav">
+									<li class="nav-item">
+										<a href="home" class="nav-link">Home</a>
+									</li>
+									<li class="nav-item">
+										<a href="about-me" class="nav-link">About Me</a>
+									</li>
+									<li class="nav-item">
+										<a href="project" class="nav-link">Portfolio</a>
+									</li>
+									<li class="nav-item">
+										<a href="skills" class="nav-link">skill</a>
+									</li>
+								</ul>
+							</div>
+							<div class="navbar_button-wrapper">
+								<a href="login" class="btn btn-primary">conexion</a>
+								<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+									<div class="menu-icon">
+										<div class="menu-icon_line-top"></div>
+										<div class="menu-icon_line-middle">
+											<div class="menu-icon_line-middle-inner"></div>
+										</div>
+										<div class="menu-icon_line-bottom"></div>
+									</div>
+								</button>
+							</div>
+						</nav>
+					</div>
+				</nav>
+			</header>
+			<main>
+				<div class="container"></div>
+			</main>
+			<footer>
+				<p>&copy; 2024 Mon Site. Tous droits réservés.</p>
+			</footer>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+	{% endblock %}
